# ai-d2

./: Embedding Notebook.ipynb  README.md  d2.txt  input.d2  pyproject.toml
d2-tour-embeddings-05-05-2024/: index.faiss  index.pkl
