[tool.poetry]
name = "d2-ai"
package-mode = false
version = "0.1.0"
description = "RAG implementation for D2 lang."
authors = ["iammerrick <merrick.christensen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.1.17"
langchain-community = "^0.0.36"
spider-client = "^0.0.11"
load-dotenv = "^0.1.0"
faiss-cpu = "^1.8.0"
tiktoken = "^0.6.0"
langchain-openai = "^0.1.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
